--- a/index.html
+++ b/index.html
@@ -11,22 +11,18 @@
      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
      crossorigin=""/>
 
-  <!--Load markercluster CSS-->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
-
   <!--Link to local CSS-->
   <link rel="stylesheet" href="styles.css">
 
-  <title>ENGO 551 Lab 2</title>
+  <title>ENGO 551 Lab 3</title>
 
 </head>
-<body data-spy="scroll" data-target="scrollSpyCol">
+<body>
 
   <!--Bootstrap navbar component-->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">ENGO 551 - Lab 2</a>
+      <a class="navbar-brand" href="index.html">ENGO 551 - Lab 3</a>
 
 
 
@@ -37,22 +33,38 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-3">
-        <h4>Building Permits Search</h4>
-        <p>Search the City of Calgary's Open Data API for information on the city's buildings.</p>
+        <br/>
+        <h4>Calgary 2017 Traffic Incidents Visualizer</h4>
+        <p>Search the City of Calgary's Open Data for information on traffic incidents in 2017.</p>
+        <p>Toggle between the Mapbox and OpenStreetMap layers by using the form buttons on the upper right corner of the map.</p>
 
-
-        <form id="form_search" name="form_search">
-          <div class="form-group">
-              <label for="startDate">Enter a date range:</label>
-              <input class="form-control datePicker" id="startDate" name="startDate" type="text" placeholder="Click here to set a date">
-
-          </div>
-          <br/>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-
-        </form>
+        <p><b>Mapbox Key:</b></p>
+        <table class="table">
+          <tr>
+            <th colspan="2">Color</th>
+            <th>Value</th>
+          </tr>
+          <tr>
+            <td>Red</td>
+            <td><div class="circle" style="background-color:red"></div></td>
+            <td>Multiple (>2) vehicle incidents</td>
+          </tr>
+          <tr>
+            <td>Orange</td>
+            <td><div class="circle" style="background-color:orange"></div></td>
+            <td>Two vehicle incidents</td>
+          </tr>
+          <tr>
+            <td>Yellow</td>
+            <td><div class="circle" style="background-color:yellow"></div></td>
+            <td>Single vehicle incidents</td>
+          </tr>
+          <tr>
+            <td>White</td>
+            <td><div class="circle" style="background-color:white"></div></td>
+            <td>Other/uncategorized vehicle incidents</td>
+          </tr>
+        </table>
         <br/>
 
         <div class="alert alert-info" role="alert" id="test"></div>
@@ -75,15 +87,6 @@
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""></script>
-
-  <!--Load Markercluster JS"-->
-  <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
-
-  <!--Load Spiderifier JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier-Leaflet/0.2.6/oms.min.js"></script>
-
-  <!--Load datepicker JS-->
-  <script src="https://cdn.jsdelivr.net/npm/litepicker/dist/litepicker.js"></script>
 
   <!--Link to local JS-->
   <script type="text/javascript "src="mapScripts.js"></script>
